[package]
name = "mquickjs-sys"
version = "0.1.0"
description = "Low-level FFI bindings to the MicroQuickJS engine"
license = "MIT"
repository = "https://github.com/fcoury/mquickjs-rs"
readme = "README.md"
edition = "2024"
rust-version = "1.89"
links = "mquickjs"
keywords = ["javascript", "quickjs", "embedded", "ffi"]
categories = ["external-ffi-bindings", "embedded"]

[dependencies]

[build-dependencies]
bindgen = "0.71"
cc = "1.0"
