[package]
name = "mquickjs"
version = "0.1.0"
description = "Safe, idiomatic Rust wrapper for the MicroQuickJS engine"
license = "MIT"
repository = "https://github.com/fcoury/mquickjs-rs"
readme = "README.md"
edition = "2024"
rust-version = "1.89"
keywords = ["javascript", "quickjs", "embedded", "ffi"]
categories = ["api-bindings", "embedded"]

[dependencies]
mquickjs-sys = { version = "0.1.0", path = "../mquickjs-sys" }
thiserror = "1.0"
